@@ -63,17 +63,9 @@
                      text="Recursive view"
                      title="Show all subtrees and leaves in one page";
    
-   END %]
+   END;
+   INCLUDE overviewShortcuts %]
 </DIV>
-
-[% IF nodeParam(token, 'has-overview-subleaves', 1) == 'yes' %]
-<DIV CLASS="BottomShortcuts">
-[% INCLUDE shortcut url=url(token, 'overview-subleaves-html')
-                    text=nodeParam(token, 'overview-shortcut-text', 1)
-                    title=nodeParam(token, 'overview-shortcut-title', 1) %]
-</DIV>
-[% END %]
-
 
 [% INCLUDE bottomline %]
 [% INCLUDE htmlend %]
