@@ -242,14 +242,17 @@
   <template name="cisco-saa-subtree">
     <param name="comment"      value="Cisco Service Assurance Agent"/>
     <param name="precedence"   value="-400" />
-    <param name="has-overview-subleaves"    value="yes"/>
-    <param name="overview-subleave-name"    value="LatestCompletionTime"/>
-    <param name="overview-shortcut-text"
-           value="Show responce times for all rows"/>
-    <param name="overview-shortcut-title"
+    
+    <param name="has-overview-shortcuts"    value="yes"/>
+    <param name="overview-shortcuts"        value="rt"/>
+    <param name="overview-subleave-name-rt"    value="LatestCompletionTime"/>
+    <param name="overview-shortcut-text-rt"
+           value="All responce times"/>
+    <param name="overview-shortcut-title-rt"
            value="Show all responce time graphs in one page"/>
-    <param name="overview-page-title"
+    <param name="overview-page-title-rt"
            value="Responce Time Graphs"/>
+           
     <param name="rrd-hwpredict"     value="disabled" />
   </template>
 
